--- a/src/UserDialog.css
+++ b/src/UserDialog.css
@@ -17,9 +17,11 @@
 }
 .UserDialog>nav:first-child{
     padding: 1em;
+    margin-left: -2em;
 }
-.UserDialog>nav:first-child input[type=radio]:not(:first-child){
+.UserDialog>nav:first-child label{
     margin-left: 2em;
+    cursor: pointer;
 }
 .UserDialog form>.row{
     display: flex;
