--- a/src/UserDialog.css
+++ b/src/UserDialog.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: hsla(0, 0%, 0%, 0.4)
 }
 .UserDialog{
     border-radius: 4px;
@@ -15,13 +16,22 @@
     border: 1px solid #aaa;
     box-shadow: 0 0 1em hsla(0, 0%, 0%, 0.35)
 }
-.UserDialog>nav:first-child{
+.UserDialog .signInOrSignUp>nav:first-child{
     padding: 1em;
     margin-left: -2em;
 }
-.UserDialog>nav:first-child label{
+.UserDialog .signInOrSignUp>nav:first-child label{
     margin-left: 2em;
     cursor: pointer;
+}
+.UserDialog .forgotPassword>h3{
+    padding: 1em;
+}
+.UserDialog .forgotPassword>form{
+    padding: 0 1em 1em;
+}
+.UserDialog .signInOrSignUp>.panse{
+    padding: 0 1em 1em;
 }
 .UserDialog form>.row{
     display: flex;
@@ -32,4 +42,13 @@
 }
 .UserDialog form>.row.actions{
     padding-left: 4em;
+    display: flex;
+    align-items: center;
+}
+.UserDialog form>.row.actions button{
+    margin-right: 0.5em;
+}
+.UserDialog button{
+    font:inherit;
+    padding: 0.2em;
 }
